# SFI-AutoShip-COLAV-simulator

./: .gitignore  .gitmodules  LICENSE  README.md  ais_data.csv  animation.py  config_control.ini  config_new_scenario.ini  config_reader.py  config_scenario_generator.ini  config_ships.ini  config_simulator.ini  functions.py  main.py  map.py  read_config.py  requirements.txt  sbmpc.py  scenario_generator.py  scenario_simulator.py  sensors.py  setup.cfg  ship.py  utils.py
colav_simulator/: KF.py  behavior_generator.py  main.py  map.py  sbmpc.py  scenario_config.py  scenario_generator.py  scenario_management.py  scenario_simulator.py  simulator.py
colav_simulator/colav_simulator/: scenario_config.py  scenario_generator.py  simulator.py
config/: evaluator.yaml  new_scenario.ini  new_scenario.yaml  scenario_generator.yaml  seacharts.yaml  ships.ini  ships.yaml  simulator.ini  simulator.yaml  visualizer.yaml
data/: config.ini  vessels.csv
examples/: dummy_planner.py  pqrrt_star.py
scenarios/: aalesund_no_los.yaml  aalesund_random.yaml  aalesund_random1.yaml  aalesund_random2.yaml  aalesund_random2_18012023_13_48_46.yaml  aalesund_random_05022023_17_21_30.yaml  aalesund_random_18012023_13_48_46.yaml  aalesund_random_20012023_13_00_55.yaml  ais1_16012023_13_08_43.yaml  ais1_24012023_13_48_55.yaml  ais_scenario.yaml  ais_scenario1.yaml  ais_scenario2.yaml  ais_scenario_west_coast.yaml  boknafjorden_generation_test.yaml  boknafjorden_ship_generation_test.yaml  crossing_give_way.json  crossing_give_way.yaml  crossing_give_way_00.json  crossing_stand_on.json  crossing_stand_on.yaml  crossing_stand_on_00.json  example.yaml  head_on.json  head_on.yaml  head_on1_07012023_11_36_28.yaml  head_on_00.json  head_on_01.json  head_on_02.json  head_on_03.json  head_on_04.json  head_on_sbmpc.yaml  new_scenario1.yaml  overtaken.json  overtaken.yaml  overtaken_00.json  overtaken_01.json  overtaken_02.json  overtaking.json  overtaking.yaml  (+15 more)
seacharts/: seacharts.py
ship_models/: random_ship_model.py  telematron.py  telemetron.py
tests/: prog  prog.prof  test_behavior_generator.py  test_common.py  test_gunnerus.py  test_gym.py  test_radar.py  test_scenario_generator.py  test_scenario_management.py  test_ship.py  test_simulation_and_evaluation.py  test_simulator copy.py  test_simulator.py  test_simulator_data_output.py  test_simulator_jipda.py  test_simulator_vimmjipda.py  test_visualize_results.py
(+556 files in other folders)
