[metadata]
name = colav_simulator
version = 0.0.1
author = Trym Tengesdal, Melih Akdag, Magne Aune, Joachim Miller
author_email = tengesdal1994@gmail.com
description = Simulator for maritime collision avoidance benchmarking.
url = https://github.com/NTNU-Autoship-Internal/colav_simulator
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = maritime collision avoidance, simulation, python, ships, visualization
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/NTNU-Autoship-Internal/colav_simulator/issues

[options]
package_dir =
  '' = colav_simulator
packages = find:
install_requires = file: requirements.txt
    #rrt_star_lib Install manually in separate folder per now
    #colav_evaluation_tool Also require manual install as locally editable package
python_requires = >=3.10
test_suite = tests

[options.package_data]
colav_simulator =  schemas/**/*
